Converting textarea to div for print questionnaires

--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/psicoProfile.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/psicoProfile.html.twig
@@ -24,10 +24,13 @@
         @media only screen {
 
             .btnSubmitForm, .btnPrintForm { margin: 10px; float: right;}
+            .form-title {display: none;}
+            .hiddenOnScreen {display: none;}
         }
 
-        @media only print {
-
+        @media print {
+            .questionnaire-textarea {display: none; visibility: false;}
+            .hiddenOnScreen {display: block;}
         }
 
     </style>
