--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodGroupQualifications.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodGroupQualifications.html.twig
@@ -8,7 +8,7 @@
 
 {% block extrajs %}
 <script type="text/javascript" src="{{ asset('js/jquery.printElement.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('js/tek_exp_periodGroupQualifications.js') }}"></script>
+<script type="text/javascript" src="{{ asset('js/tek_exp_periodGroupQualifications.js?1.1.0') }}"></script>
 
 <script type="text/javascript">
     Tecnotek.module = "periodGroupQualifications";
@@ -51,6 +51,8 @@
                     <option value="3" convo="2">CONVII 2013</option>
                     <option value="6" convo="1">CONVI 2014</option>
                     <option value="6" convo="2">CONVII 2014</option>
+                    <option value="9" convo="1">CONVI 2015</option>
+                    <option value="9" convo="2">CONVII 2015</option>
                 </select>
             </div>
             <input id="conv" name="conv" hidden="hidden" value = "0">
